--- a/templates/hugo/Jenkinsfile
+++ b/templates/hugo/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
     disableConcurrentBuilds(abortPrevious: true)
   }
   triggers {
-    eventTrigger githubPush
+    githubPush
   }
   environment {
     repoOwner = "${repoOwner}"
